Fixed overlapping of menu sections for smaller desktops.

--- a/styles/about.css
+++ b/styles/about.css
@@ -57,7 +57,7 @@ section p {
 
 .content{
   display: grid;
-  grid-gap: 13px;
+  grid-gap: 10px;
 }
 
 @media screen and (min-width: 780px) {
